--- a/Synesthesia_APP/SynesthesiaVision/app/src/main/res/layout/activity_main_2.xml
+++ b/Synesthesia_APP/SynesthesiaVision/app/src/main/res/layout/activity_main_2.xml
@@ -218,7 +218,7 @@
         android:layout_marginLeft="151dp"
         android:layout_marginRight="151dp"
         android:layout_marginStart="151dp"
-        android:layout_marginTop="18dp"
+        android:layout_marginTop="10dp"
         android:text="1/10 Hz"
         android:textAlignment="center"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
@@ -280,5 +280,53 @@
         tools:layout_constraintBottom_creator="1"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp" />
+
+    <RadioGroup
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:checkedButton="@+id/radioAntigo"
+        android:orientation="vertical"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintVertical_bias="0.139"
+        android:id="@+id/rdGroup">
+
+
+        <RadioButton
+            android:id="@+id/radioNovo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Novo"
+            tools:layout_editor_absoluteX="-17dp"
+            tools:layout_editor_absoluteY="-5dp" />
+
+        <RadioButton
+            android:id="@+id/radioAntigo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Antigo" />
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Geracao de Som"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/rdGroup"
+        android:layout_marginRight="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="97dp"
+        app:layout_constraintHorizontal_bias="0.648" />
 
 </android.support.constraint.ConstraintLayout>
