--- a/Synesthesia_APP/SynesthesiaVision/app/src/main/res/layout/seekbar_testes.xml
+++ b/Synesthesia_APP/SynesthesiaVision/app/src/main/res/layout/seekbar_testes.xml
@@ -6,6 +6,35 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
+    <RadioGroup
+        android:layout_width="102dp"
+        android:layout_height="78dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.98"
+        android:id="@+id/radioGroup">
+
+        <RadioButton
+            android:id="@+id/rdNovo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Novo" />
+
+        <RadioButton
+            android:id="@+id/rdAntigo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Antigo" />
+    </RadioGroup>
+
     <View
         android:id="@+id/view4"
         android:layout_width="385dp"
@@ -517,6 +546,18 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
+
+    <TextView
+        android:id="@+id/textView8"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Geração do Som"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/radioGroup" />
 
 
 </android.support.constraint.ConstraintLayout>
