--- a/Synesthesia_APP/SynesthesiaVision/app/src/main/res/layout/activity_main_2.xml
+++ b/Synesthesia_APP/SynesthesiaVision/app/src/main/res/layout/activity_main_2.xml
@@ -10,205 +10,148 @@
 
     <Button
         android:id="@+id/btnWeather"
-        android:layout_width="145dp"
-        android:layout_height="78dp"
-        android:layout_marginEnd="8dp"
-        android:background="@android:color/holo_blue_light"
-        android:text="Weather"
-        android:textColor="@android:color/background_light"
-        android:layout_marginTop="33dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnStart"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="147dp"
+        android:layout_height="90dp"
         android:layout_marginBottom="24dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1" />
-
-    <Button
-        android:id="@+id/btnDisconnect"
-        android:layout_width="145dp"
-        android:layout_height="0dp"
-        android:text="Disconnect"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnStart"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="19dp"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintVertical_bias="0.555"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1" />
-
-    <Button
-        android:id="@+id/btnDeacrease"
-        android:layout_width="103dp"
-        android:layout_height="52dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:text="Decrease"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="33dp"
+        android:background="@android:color/holo_blue_light"
+        android:text="Previsão de Tempo"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnStart"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintTop_creator="1"
+        app:layout_constraintVertical_bias="0.724"
+        app:layout_constraintLeft_toRightOf="@+id/btnDisconnect"
         android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias="1.0" />
 
     <Button
-        android:id="@+id/btnIncrease"
-        android:layout_width="103dp"
-        android:layout_height="52dp"
-        android:layout_marginEnd="8dp"
+        android:id="@+id/btnDisconnect"
+        android:layout_width="147dp"
+        android:layout_height="92dp"
+        android:layout_marginBottom="19dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="8dp"
-        android:text="Increase"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="30dp"
+        android:text="Desconectar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnStart"
+        app:layout_constraintVertical_bias="0.869"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintTop_creator="1" />
+
+    <Button
+        android:id="@+id/btnDeacrease"
+        android:layout_width="129dp"
+        android:layout_height="104dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="Decrementar"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="247dp" />
+
+    <Button
+        android:id="@+id/btnIncrease"
+        android:layout_width="128dp"
+        android:layout_height="105dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
+        android:text="Incrementar"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/btnDeacrease"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnStart"
         android:layout_width="0dp"
         android:layout_height="99dp"
-        android:text="START"
-        android:layout_marginStart="71dp"
+        android:layout_marginBottom="107dp"
         android:layout_marginEnd="71dp"
         android:layout_marginLeft="71dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="71dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="107dp"
-        app:layout_constraintHorizontal_bias="0.503"
+        android:layout_marginStart="71dp"
         android:layout_marginTop="8dp"
+        android:text="Iniciar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/chkFront"
         app:layout_constraintVertical_bias="0.75"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
     <CheckBox
         android:id="@+id/chkLeft"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="8dp"
-        android:text="Left"
-        android:layout_marginLeft="8dp"
+        android:layout_marginTop="100dp"
+        android:text="Esquerda"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/view6"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/view7"
-        app:layout_constraintHorizontal_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/btnIncrease" />
 
     <CheckBox
         android:id="@+id/chkFront"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="144dp"
-        android:layout_marginStart="144dp"
-        android:text="Front"
-        android:layout_marginTop="84dp"
-        app:layout_constraintTop_toBottomOf="@+id/txtFrequency"
         android:layout_marginLeft="144dp"
         android:layout_marginRight="144dp"
-        app:layout_constraintHorizontal_bias="0.444"
-        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="21dp"
+        android:text="Frente"
+        app:layout_constraintLeft_toLeftOf="@+id/chkLeft"
         app:layout_constraintRight_toRightOf="@+id/chkRight"
+        app:layout_constraintTop_toBottomOf="@+id/txtFrequency"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/chkLeft" />
-
-    <View
-        android:layout_width="1dp"
-        android:layout_height="148dp"
-        android:background="@android:color/background_dark"
-        android:id="@+id/view6"
-        android:layout_marginTop="65dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnIncrease"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnStart"
-        android:layout_marginLeft="136dp"
-        app:layout_constraintVertical_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        tools:ignore="RtlHardcoded"
-        android:layout_marginStart="136dp" />
-
-    <View
-        android:id="@+id/view2"
-        android:layout_width="1dp"
-        android:layout_height="148dp"
-        android:background="@android:color/background_dark"
-        android:layout_marginTop="65dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnDeacrease"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnStart"
-        android:layout_marginRight="127dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        android:layout_marginEnd="127dp" />
-
-    <View
-        android:id="@+id/view5"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:background="@android:color/background_dark"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/view2"
-        android:layout_marginTop="101dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnDeacrease"
-        app:layout_constraintHorizontal_bias="0.0"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
-
-    <View
-        android:id="@+id/view7"
-        android:layout_width="0dp"
-        android:layout_height="1dp"
-        android:layout_marginTop="101dp"
-        android:background="@android:color/background_dark"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/view6"
-        app:layout_constraintTop_toBottomOf="@+id/btnIncrease"
-        tools:layout_constraintRight_creator="1"
-        tools:layout_constraintLeft_creator="1" />
+        tools:layout_constraintRight_creator="1" />
 
     <CheckBox
         android:id="@+id/chkRight"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="6dp"
+        android:layout_marginRight="16dp"
         android:layout_marginStart="8dp"
-        android:text="Right"
-        android:layout_marginRight="6dp"
+        android:layout_marginTop="101dp"
+        android:text="Direita"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/view2"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintHorizontal_bias="1.0"
-        android:layout_marginTop="31dp"
-        app:layout_constraintTop_toBottomOf="@+id/view5" />
+        app:layout_constraintTop_toBottomOf="@+id/btnDeacrease" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Frequency"
-        android:layout_marginStart="144dp"
         android:layout_marginEnd="143dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="16dp"
         android:layout_marginLeft="144dp"
         android:layout_marginRight="143dp"
-        app:layout_constraintHorizontal_bias="0.507"
-        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="144dp"
+        android:layout_marginTop="130dp"
+        android:text="Frequência"
+        android:textSize="30sp"
+        app:layout_constraintLeft_toLeftOf="@+id/btnIncrease"
         app:layout_constraintRight_toRightOf="@+id/btnDeacrease"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/btnIncrease" />
+        tools:layout_constraintRight_creator="1" />
 
     <TextView
         android:id="@+id/txtFrequency"
@@ -221,84 +164,11 @@
         android:layout_marginTop="10dp"
         android:text="1/10 Hz"
         android:textAlignment="center"
-        app:layout_constraintTop_toBottomOf="@+id/textView3"
-        tools:layout_constraintRight_creator="1"
+        android:textSize="24sp"
+        app:layout_constraintLeft_toLeftOf="@+id/btnIncrease"
         app:layout_constraintRight_toRightOf="@+id/btnDeacrease"
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/btnIncrease" />
-
-    <TextView
-        android:id="@+id/txtLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/chkLeft"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnStart"
-        app:layout_constraintRight_toLeftOf="@+id/view6"
-        android:layout_marginRight="8dp"
-        app:layout_constraintHorizontal_bias="0.129"
-        app:layout_constraintVertical_bias="0.545"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
-
-    <TextView
-        android:id="@+id/txtFront"
-        android:layout_width="62dp"
-        android:layout_height="19dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toTopOf="@+id/btnStart"
-        app:layout_constraintHorizontal_bias="0.489"
-        app:layout_constraintLeft_toRightOf="@+id/view6"
-        app:layout_constraintRight_toLeftOf="@+id/view2"
-        app:layout_constraintTop_toBottomOf="@+id/chkFront"
-        app:layout_constraintVertical_bias="0.155"
-        android:layout_marginEnd="8dp" />
-
-    <TextView
-        android:id="@+id/txtRight"
-        android:layout_width="62dp"
-        android:layout_height="15dp"
-        android:layout_marginBottom="18dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="15dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="@+id/view2"
-        app:layout_constraintHorizontal_bias="0.836"
-        app:layout_constraintLeft_toRightOf="@+id/view2"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/chkRight"
-        app:layout_constraintVertical_bias="0.411"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
-
-    <RadioGroup
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:checkedButton="@+id/radioAntigo"
-        android:orientation="vertical"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintVertical_bias="0.139"
-        android:id="@+id/rdGroup">
-
-
-    </RadioGroup>
+        tools:layout_constraintRight_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
